--- a/src/_locales/es-ES/messages.json
+++ b/src/_locales/es-ES/messages.json
@@ -4,8 +4,8 @@
     "description": "Social Helpers"
   },
   "extensionDescription": {
-    "message": "Esta extensión es para ayudar a responder preguntas en Twitter utilizando el hashtag #fxhelp, dando algunos consejos, respuestas comunes y explicando cómo funciona el programa de Social Support.",
-    "description": "This webextension is for help to answer questions on Twitter using the hashtag #fxhelp, giving some tips, common replies and explaining how works the Social Support program."
+    "message": "Esta webextensión proporciona ayuda para responder preguntas en Twitter utilizando el hashtag #fxhelp, da algunos consejos, respuestas comunes y explica cómo funciona el programa de Social Support.",
+    "description": "This webextension provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
   },
   "menuItemTelegram": {
     "message": "Telegram",
