--- a/src/_locales/pt-BR/messages.json
+++ b/src/_locales/pt-BR/messages.json
@@ -4,8 +4,8 @@
     "description": "Social Helpers"
   },
   "extensionDescription": {
-    "message": "Esta webextension é para ajudar a responder perguntas no Twitter utilizando a hashtag #fxhelp, dando algumas dicas, respostas comuns e explicando como funciona o programa de Social Support.",
-    "description": "This webextension is for help to answer questions on Twitter using the hashtag #fxhelp, giving some tips, common replies and explaining how works the Social Support program."
+    "message": "Esta webextension fornece ajuda para responder a perguntas no Twitter usando a hashtag #fxhelp, dá algumas dicas, respostas comuns e explica como o programa de Social Support funciona.",
+    "description": "This webextension provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
   },
   "menuItemTelegram": {
     "message": "Telegram",
