--- a/src/_locales/es-ES/messages.json
+++ b/src/_locales/es-ES/messages.json
@@ -32,8 +32,8 @@
       "description": "How do I get help?"
     },
     "menuEscalate": {
-      "message": "Where and When to Escalate or Find More Help?",
-      "description": "Where and When to Escalate or Find More Help?"
+      "message": "How to Escalate issues or Find Help?",
+      "description": "How to Escalate issues or Find Help?"
     },
     "menuRolesInTheSocialSupportProgram": {
       "message": "Roles in the Social Support Program",
