--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -4,8 +4,8 @@
     "description": "Social Helpers"
   },
   "extensionDescription": {
-    "message": "This add-on provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works.",
-    "description": "This add-on provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
+    "message": "This Add-on provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works.",
+    "description": "This Add-on provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
   },
   "about": {
     "message": "About Social Helpers"
@@ -109,12 +109,12 @@
     "message": "About"
   },
   "bugs": {
-    "message": "If you find any bugs, have any suggestions or some ideas for this add-on: Please create a new issue."
+    "message": "If you find any bugs, have any suggestions or some ideas for this Add-on: Please create a new issue."
   },
   "works": {
-    "message": "This extension provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
+    "message": "This Add-on provides help to answer questions on Twitter using the hashtag #fxhelp, gives some tips, has built-in common replies and explains how the Social Support program works."
   },
   "links": {
-    "message": "The add-on counts with the following useful links, which will help you take the first steps and start contributing:"
+    "message": "The Add-on counts with the following useful links, which will help you take the first steps and start contributing:"
   }
 }
